# KK.TRACK

./: .gitignore  README.md
.cursor/rules/: firmware-build.mdc
.github/workflows/: verify.yml
components/kk/: CMakeLists.txt
components/kk/embed/: rx_web.html
components/kk/src/: head_track.c  imu_mount.c  led.c  (+9 more)
receiver/: README.md
receiver/pio/rx/components/kk/: CMakeLists.txt  README.md
receiver/pio/rx/components/kk/embed/: rx_web.html
receiver/pio/rx/components/kk/include/kk/: gesture_cfg.h  head_track.h  imu_mount.h  led.h  link_config.h  rc_out.h  rx_ota.h  rx_profile.h  rx_web.h  servo_follow.h  tx_track_cfg.h
receiver/pio/rx/components/kk/src/: fw_version.c  head_track.c  ota_image.c  ppm.c  rc_proto.c  rx_ota.c  rx_profile.c  rx_web.c  rx_web_page.c  telemetry.c
receiver/pio/rx/components/kk/test/host/stubs/: nvs.h
receiver/pio/rx/components/kk/test/host/stubs/kk/: link_config.h
receiver/pio/rx/components/kk/tools/: gen_rx_web_page.py  verify_kk_copies.py
tools/: pio_fw_version.py
tools/decouple_scope/: decouple_scope.py  requirements.txt  run.bat
tools/imu_viewer/: imu_viewer.py  run.bat
transmitter/: README.md
transmitter/pio/tx/components/kk/: CMakeLists.txt
transmitter/pio/tx/components/kk/embed/: rx_web.html
transmitter/pio/tx/components/kk/include/kk/: board_rx.h  board_tx.h  fw_version.h  gesture_cfg.h  kk_log.h  link_config.h  ppm.h  rc_proto.h  repair.h  rx_ota.h  rx_profile.h  rx_web.h
transmitter/pio/tx/components/kk/src/: gesture_cfg.c  imu_mount.c  repair.c  rx_ota.c  rx_profile.c  rx_web.c  rx_web_page.c  servo_follow.c  storage.c  telemetry.c  time.c
transmitter/pio/tx/components/kk/test/: run_host_tests.py
transmitter/pio/tx/components/kk/test/host/: test_host.c
transmitter/pio/tx/components/kk/tools/: gen_rx_web_page.py  sync_kk_copies.py
(+63 files in other folders)
